--- a/MovieApp/Scenes/PopularMovies/View/Cell/MovieCategoryCell.xib
+++ b/MovieApp/Scenes/PopularMovies/View/Cell/MovieCategoryCell.xib
@@ -19,10 +19,6 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zns-gd-IJw">
                         <rect key="frame" x="0.0" y="0.0" width="85" height="120"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="85" id="DCw-M2-R4l"/>
-                            <constraint firstAttribute="height" constant="120" id="jBF-bj-BWE"/>
-                        </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="irr-cr-sZN">
                         <rect key="frame" x="101" y="0.0" width="203" height="120"/>
@@ -41,12 +37,6 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iBB-OJ-OZd">
                                 <rect key="frame" x="0.0" y="31.5" width="203" height="25.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yMj-9l-7ax">
-                                        <rect key="frame" x="18" y="5.5" width="31" height="15"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="0Bd-8U-ycf">
                                         <rect key="frame" x="2" y="7" width="12" height="12"/>
                                         <constraints>
@@ -54,23 +44,19 @@
                                             <constraint firstAttribute="height" constant="12" id="l5d-IR-1ML"/>
                                         </constraints>
                                     </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="percent" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zbK-Zd-LGn">
-                                        <rect key="frame" x="53" y="7.5" width="12" height="10.5"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="12" id="Ezv-gi-8hY"/>
-                                            <constraint firstAttribute="height" constant="12" id="TmT-Cf-yfA"/>
-                                        </constraints>
-                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yMj-9l-7ax">
+                                        <rect key="frame" x="18" y="5.5" width="177" height="14.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="0Bd-8U-ycf" firstAttribute="centerY" secondItem="iBB-OJ-OZd" secondAttribute="centerY" id="3JE-5m-P5m"/>
                                     <constraint firstItem="yMj-9l-7ax" firstAttribute="leading" secondItem="0Bd-8U-ycf" secondAttribute="trailing" constant="4" id="8Fh-mB-kdK"/>
-                                    <constraint firstItem="zbK-Zd-LGn" firstAttribute="leading" secondItem="yMj-9l-7ax" secondAttribute="trailing" constant="4" id="LFY-Oy-tlg"/>
-                                    <constraint firstItem="zbK-Zd-LGn" firstAttribute="height" secondItem="yMj-9l-7ax" secondAttribute="height" multiplier="0.8" id="NiJ-Wf-yxm"/>
+                                    <constraint firstAttribute="trailing" secondItem="yMj-9l-7ax" secondAttribute="trailing" constant="8" id="Rka-Pn-1p9"/>
                                     <constraint firstItem="0Bd-8U-ycf" firstAttribute="centerY" secondItem="yMj-9l-7ax" secondAttribute="centerY" id="XHm-a7-NgY"/>
-                                    <constraint firstItem="zbK-Zd-LGn" firstAttribute="centerY" secondItem="yMj-9l-7ax" secondAttribute="centerY" id="tHp-ry-TDz"/>
                                     <constraint firstItem="0Bd-8U-ycf" firstAttribute="leading" secondItem="iBB-OJ-OZd" secondAttribute="leading" constant="2" id="xol-Dq-zes"/>
                                 </constraints>
                             </view>
@@ -88,16 +74,13 @@
                                 <rect key="frame" x="0.0" y="94.5" width="203" height="25.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xD0-Rj-aCY">
-                                        <rect key="frame" x="4" y="5" width="31.5" height="16"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="16" id="I7d-v7-9ig"/>
-                                        </constraints>
+                                        <rect key="frame" x="4" y="4.5" width="31.5" height="17"/>
                                         <fontDescription key="fontDescription" name="NotoSansOriya-Bold" family="Noto Sans Oriya" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Etc-Ff-UOv">
-                                        <rect key="frame" x="51.5" y="5.5" width="29.5" height="14.5"/>
+                                        <rect key="frame" x="47.5" y="4.5" width="29.5" height="17"/>
                                         <fontDescription key="fontDescription" name="NotoSansOriya" family="Noto Sans Oriya" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -105,31 +88,27 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="Etc-Ff-UOv" firstAttribute="height" secondItem="xD0-Rj-aCY" secondAttribute="height" multiplier="0.90625" id="1UG-D4-boh"/>
-                                    <constraint firstItem="Etc-Ff-UOv" firstAttribute="leading" secondItem="xD0-Rj-aCY" secondAttribute="trailing" constant="16" id="DUy-9p-tK5"/>
+                                    <constraint firstItem="Etc-Ff-UOv" firstAttribute="leading" secondItem="xD0-Rj-aCY" secondAttribute="trailing" constant="12" id="DUy-9p-tK5"/>
                                     <constraint firstItem="Etc-Ff-UOv" firstAttribute="centerY" secondItem="xD0-Rj-aCY" secondAttribute="centerY" id="ZUA-yc-fSn"/>
                                     <constraint firstItem="xD0-Rj-aCY" firstAttribute="leading" secondItem="l4b-4f-0pu" secondAttribute="leading" constant="4" id="ZoS-rs-HGY"/>
                                     <constraint firstItem="xD0-Rj-aCY" firstAttribute="centerY" secondItem="l4b-4f-0pu" secondAttribute="centerY" id="b1o-dK-eC1"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <constraints>
-                            <constraint firstItem="DgZ-a8-1Pz" firstAttribute="top" secondItem="irr-cr-sZN" secondAttribute="top" id="JCR-wp-1Oz"/>
-                            <constraint firstAttribute="trailing" secondItem="DgZ-a8-1Pz" secondAttribute="trailing" id="jUj-mW-X1e"/>
-                            <constraint firstItem="DgZ-a8-1Pz" firstAttribute="leading" secondItem="irr-cr-sZN" secondAttribute="leading" id="xmf-Mk-bTj"/>
-                        </constraints>
                     </stackView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
+                <constraint firstItem="Zns-gd-IJw" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" id="6wQ-FQ-aE2"/>
                 <constraint firstAttribute="bottom" secondItem="irr-cr-sZN" secondAttribute="bottom" id="D7r-uf-rgg"/>
                 <constraint firstItem="Zns-gd-IJw" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="DPM-Wb-g43"/>
+                <constraint firstItem="Zns-gd-IJw" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.279605" id="NIp-5h-Nt4"/>
+                <constraint firstAttribute="trailing" secondItem="irr-cr-sZN" secondAttribute="trailing" id="Uhn-k6-Lnm"/>
                 <constraint firstItem="irr-cr-sZN" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="hHu-KP-AuU"/>
                 <constraint firstItem="irr-cr-sZN" firstAttribute="leading" secondItem="Zns-gd-IJw" secondAttribute="trailing" constant="16" id="mlM-sS-7zy"/>
                 <constraint firstItem="Zns-gd-IJw" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="nAh-BM-wqx"/>
-                <constraint firstAttribute="bottom" secondItem="Zns-gd-IJw" secondAttribute="bottom" id="p9h-m2-P6U"/>
-                <constraint firstAttribute="trailing" secondItem="irr-cr-sZN" secondAttribute="trailing" id="uVm-DK-Ri0"/>
+                <constraint firstItem="Zns-gd-IJw" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="ybc-so-Hrq"/>
             </constraints>
             <size key="customSize" width="337" height="160"/>
             <connections>
@@ -145,7 +124,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="percent" catalog="system" width="128" height="121"/>
         <image name="star" width="12" height="11"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
