--- a/MovieApp/Scenes/PopularMovies/View/Cell/MovieCategoryCell.xib
+++ b/MovieApp/Scenes/PopularMovies/View/Cell/MovieCategoryCell.xib
@@ -99,6 +99,7 @@
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Zns-gd-IJw" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" id="6wQ-FQ-aE2"/>
                 <constraint firstAttribute="bottom" secondItem="irr-cr-sZN" secondAttribute="bottom" id="D7r-uf-rgg"/>
